--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.15.14",
     "@tanstack/react-query": "^5.28.9",
+    "modern-normalize": "^2.0.0",
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18"
