--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "modern-normalize": "^2.0.0",
     "next": "14.1.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "tailwind-merge": "^2.2.2"
   },
   "devDependencies": {
     "@tanstack/eslint-plugin-query": "^5.28.6",
