--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tanstack/react-query": "^5.28.9",
     "modern-normalize": "^2.0.0",
     "next": "14.1.4",
+    "nuqs": "^1.17.1",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.2.2"
